--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header>
     <nav class="navbar_container">
       <div class="navbar_logo">
-        <img src="../images/avn_logo.jpg" alt="" id="logo">
+        <img src="./images/avn_logo.jpg" alt="" id="logo">
       </div>
       <div class="navbar_text">
         <button class="button_primary">
@@ -35,15 +35,15 @@
     <div class="story_div"><img src="./images/avn_1.jpg" alt="image" class="story_image">
     <p class="story_text"> <span style="color:red;">The Avengers 2012</span>Marvel's The Avengers or simply The Avengers, is a 2012 American superhero film based on the Marvel Comics superhero team of the same name.
         </p></div>
-    <div class="story_div"><img src="../images/avn_2.jpg" alt="" class="story_image">
+    <div class="story_div"><img src="./images/avn_2.jpg" alt="" class="story_image">
     <p class="story_text"> <span style="color:red">Age of Ultron</span>  is a 2015 American superhero film based on the Marvel Comics superhero team the Avengers</p></div>
-    <div class="story_div"><img src="../images/avn_3.jpg" alt="" class="story_image">
+    <div class="story_div"><img src="./images/avn_3.jpg" alt="" class="story_image">
     <p class="story_text"><span  style="color:red">Infinity War </span> is a 2018 American superhero film based on the Marvel Comics superhero team the Avengers. Produced by Marvel Studios </p></div>
-    <div class="story_div"><img src="../images/avn_4.jpg" alt="" class="story_image">
+    <div class="story_div"><img src="./images/avn_4.jpg" alt="" class="story_image">
     <p class="story_text"><span style="color:red"> Endgame</span> is a 2019 American superhero film based on the Marvel Comics superhero team the Avengers. Produced by Marvel Studios </p></div>
-    <div class="story_div"><img src="../images/avn_5.jpg" alt="" class="story_image">
+    <div class="story_div"><img src="./images/avn_5.jpg" alt="" class="story_image">
     <p class="story_text"> <span style="color:red">Homecoming</span>  is a 2017 American superhero film based on the Marvel Comics character Spider-Man, co-produced by Columbia Pictures and Marvel </p></div>
-    <div class="story_div"><img src="../images/avn_6.jpg" alt="" class="story_image">
+    <div class="story_div"><img src="./images/avn_6.jpg" alt="" class="story_image">
     <p class="story_text"> <span style="color:red;">No Way Home</span>  is a 2021 American superhero film based on the Marvel Comics character Spider-Man, co-produced by Columbia Pictures and Marvel</p></div>
     
     
@@ -58,31 +58,31 @@
   </section>
 <h1 style="margin-top:2rem; text-align:center; color:hotpink;">some pics liked much by viewers!!!</h1>
 <section class="like_container">
-  <div class="food_box"><img src="../images/bot_1.jpg" alt="" class="food_image">
+  <div class="food_box"><img src="./images/bot_1.jpg" alt="" class="food_image">
   
   </div>
-  <div class="food_box"><img src="../images/avn_5.jpg" alt="" class="food_image">
+  <div class="food_box"><img src="./images/avn_5.jpg" alt="" class="food_image">
   
   </div>
-  <div class="food_box"><img src="../images/bot_3.jpg" alt="" class="food_image">
+  <div class="food_box"><img src="./images/bot_3.jpg" alt="" class="food_image">
 
   </div>
-  <div class="food_box"><img src="../images/avn_4.jpg" alt="" class="food_image">
+  <div class="food_box"><img src="./images/avn_4.jpg" alt="" class="food_image">
   
   </div>
-  <div class="food_box"><img src="../images/avn_6.jpg" alt="" class="food_image">
+  <div class="food_box"><img src="./images/avn_6.jpg" alt="" class="food_image">
 
   </div>
-  <div class="food_box"><img src="../images/bot_6.jpg" alt="" class="food_image">
+  <div class="food_box"><img src="./images/bot_6.jpg" alt="" class="food_image">
   
   </div>
-  <div class="food_box"><img src="../images/avn_3.jpg" alt="" class="food_image">
+  <div class="food_box"><img src="./images/avn_3.jpg" alt="" class="food_image">
  
   </div>
-  <div class="food_box"><img src="../images/bot_2.jpg" alt="" class="food_image">
+  <div class="food_box"><img src="./images/bot_2.jpg" alt="" class="food_image">
 
   </div>
-  <div class="food_box"><img src="../images/avn_5.jpg" alt="" class="food_image">
+  <div class="food_box"><img src="./images/avn_5.jpg" alt="" class="food_image">
  
   </div>
 </section>
